@@ -1,5 +1,11 @@
 2006-01-26  Julien Puydt  <jpuydt@free.fr>
 
+	* src/gui/main.cpp, src/gui/statusicon.cpp: Renaming of
+	Connect/Disconnect to Call/Hang up. Patch with the help of CJ van den
+	Berg.
+
+2006-01-26  Julien Puydt  <jpuydt@free.fr>
+
 	* src/gui/druid.cpp: Added get_filtered_video_devices_char_array to
 	remove StaticPicture as a choice in the druid. Fixes #328326.
 
